--- a/src/App.css
+++ b/src/App.css
@@ -8,22 +8,25 @@ h1 {
 }
 
 .product-id {
-  font-size: .8em;
+  font-size: 0.8em;
   margin: 1em 0;
 }
 
 .product-edit-icon {
-  opacity: .7;
+  opacity: 0.7;
   position: absolute;
   right: 2.3rem;
-  top: .4rem;
+  top: 0.4rem;
 }
 
 .product-edit-icon:hover {
   opacity: 1;
 }
 
-.navbar, .navbar-end, .navbar-menu, .navbar-start {
+.navbar,
+.navbar-end,
+.navbar-menu,
+.navbar-start {
   align-items: stretch !important;
   display: flex !important;
 }
